DockerFile corregido, eliminacion de librerias innesarias.

--- a/api/dockerfile
+++ b/api/dockerfile
@@ -1,20 +1,19 @@
 # Usa una imagen base de Python
-FROM python:3.12-slim
+FROM python:3.9
 
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
 
 # Copia el archivo requirements.txt en el contenedor
-COPY requirements.txt .
+COPY requirements.txt /app/
 
 # Instala las dependencias
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Copia el resto de la aplicación en el contenedor
 COPY . .
 
 # Expone el puerto en el que correrá la aplicación
-EXPOSE 8000
+EXPOSE 80
 
-# Comando para ejecutar la aplicación FastAPI usando Uvicorn
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:80"]
